--- a/causes.html
+++ b/causes.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="preloader">
-        <img class="preloader__image" src="assets/images/loader.png" alt="">
+        <img class="preloader__image" src="assets/images/lttm.png" alt="">
     </div><!-- /.preloader -->
     <div class="page-wrapper">
         <header class="main-header">
