--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="facebook-domain-verification" content="o9mynnw8h4w104zrqixsvw9jmp27fc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBLY INTERNET TECHNOLOGY</title>
